ncp-features-example/2.5.1-http-redirect/nginx-web-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-http-redirect
  namespace: ncp-feature
  labels:
    feature: http-redirect 
spec:
  replicas: 2
  selector:
    matchLabels:
      feature: http-redirect       
  template:
    metadata:
      labels:
        feature: http-redirect 
    spec:
      containers:
      - name: nginx-http-redirect 
        image: nginx:stable-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx
          mountPath: /etc/nginx
          readOnly: true
      volumes:
      - name: nginx
        configMap:
          name: nginx
