ncp-features-example/2.5.1-http-redirect/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-http-redirect
  namespace: ncp-feature
  labels:
    feature: http-redirect 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: http-redirect
